<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.example.calculator.my_control.MyTextView
            android:id="@+id/myTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textSize="55sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/myTextView"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline6">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="0" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="1" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="1" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="2" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="2" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonjia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jia"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonJian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jian"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="1" />

            <Button
                android:id="@+id/buttonChen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chen"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="2" />

            <Button
                android:id="@+id/buttonChu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chu"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonDengyu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jisuan"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="4" />

            <Button
                android:id="@+id/buttonAC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/清空"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="3" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="89dp"
                android:layout_height="62dp"
                app:layout_column="3"
                app:layout_row="4"
                app:srcCompat="@drawable/baseline_backspace_24" />

            <Button
                android:id="@+id/buttonZhengFu"
                android:layout_width="89dp"
                android:layout_height="match_parent"
                android:text="@string/Zhengfu"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="4" />

            <Button
                android:id="@+id/buttonKaifang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Kaifang"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="4" />

        </androidx.gridlayout.widget.GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>